[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Levels/Level2.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Levels/MainGame.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/level_music.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Levels/Level1.tscn" type="PackedScene" id=6]

[node name="MainGame" type="Node2D"]
script = ExtResource( 2 )

[node name="Level1" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, -1.5 )

[node name="Level2" parent="." instance=ExtResource( 1 )]
visible = false

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 15.7445, 20.809 )
collision_mask = 2147483656

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
autoplay = true
[connection signal="level_complete" from="Level1" to="." method="_on_Level1_level_complete"]
[connection signal="key_picked" from="Level1/Key" to="Level1/FadeOut" method="_on_Key_key_picked"]
[connection signal="loot_picked" from="Level2/Chest" to="Player" method="_on_Chest_loot_picked"]
[connection signal="loot_picked" from="Level2/Chest2" to="Player" method="_on_Chest_loot_picked"]
[connection signal="dead_player" from="Player" to="." method="_on_Player_dead_player"]

[editable path="Level1"]

[editable path="Level2"]
